--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -7,7 +7,7 @@
     tools:context=".activities.ResultsActivity">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageRecycleBin"
         android:layout_width="225dp"
         android:layout_height="300dp"
         android:layout_marginTop="16dp"
@@ -26,7 +26,7 @@
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageRecycleBin" />
 
     <TextView
         android:id="@+id/textDecayTime"
